--- a/ConsulterReservation2AllUsers.ui
+++ b/ConsulterReservation2AllUsers.ui
@@ -37,24 +37,12 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
-           <widget class="QLabel" name="label">
-            <property name="font">
-             <font>
-              <italic>true</italic>
-             </font>
-            </property>
-            <property name="text">
-             <string>Today_Heure1</string>
-            </property>
-           </widget>
-          </item>
-          <item>
            <layout class="QGridLayout" name="gridLayout_2">
             <item row="0" column="0">
              <widget class="QLabel" name="label_2">
               <property name="font">
                <font>
-                <underline>true</underline>
+                <underline>false</underline>
                </font>
               </property>
               <property name="text">
@@ -88,28 +76,16 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
-           <widget class="QLabel" name="label_3">
-            <property name="font">
-             <font>
-              <italic>true</italic>
-             </font>
-            </property>
-            <property name="text">
-             <string>Demain_Heure1</string>
-            </property>
-           </widget>
-          </item>
-          <item>
            <layout class="QGridLayout" name="gridLayout_3">
             <item row="1" column="0">
              <widget class="QLabel" name="label_4">
               <property name="font">
                <font>
-                <underline>true</underline>
+                <underline>false</underline>
                </font>
               </property>
               <property name="text">
-               <string>Demain_Cours1</string>
+               <string/>
               </property>
              </widget>
             </item>
