--- a/creerresevationsalle.ui
+++ b/creerresevationsalle.ui
@@ -54,12 +54,6 @@
      <layout class="QGridLayout" name="gridLayout_3">
       <item row="0" column="2">
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="2" column="1">
-         <widget class="QFontComboBox" name="combo_ue"/>
-        </item>
-        <item row="11" column="1">
-         <widget class="QFontComboBox" name="combo_groupe"/>
-        </item>
         <item row="10" column="0">
          <widget class="QLabel" name="label_promotion">
           <property name="text">
@@ -73,9 +67,6 @@
            <string>Groupe :</string>
           </property>
          </widget>
-        </item>
-        <item row="10" column="1">
-         <widget class="QFontComboBox" name="combo_promotion"/>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_ue">
@@ -91,21 +82,12 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QFontComboBox" name="combo_type_cours"/>
-        </item>
-        <item row="0" column="1">
-         <widget class="QFontComboBox" name="combo_type_salle"/>
-        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_type_salle">
           <property name="text">
            <string>Type de Salle :</string>
           </property>
          </widget>
-        </item>
-        <item row="12" column="1">
-         <widget class="QFontComboBox" name="combo_prof_sup"/>
         </item>
         <item row="12" column="0">
          <widget class="QLabel" name="label_prof_sup">
@@ -120,6 +102,24 @@
            <string>Ajouter</string>
           </property>
          </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QComboBox" name="combo_type_salle"/>
+        </item>
+        <item row="1" column="1">
+         <widget class="QComboBox" name="combo_type_cours"/>
+        </item>
+        <item row="2" column="1">
+         <widget class="QComboBox" name="combo_ue"/>
+        </item>
+        <item row="10" column="1">
+         <widget class="QComboBox" name="combo_promo"/>
+        </item>
+        <item row="11" column="1">
+         <widget class="QComboBox" name="combo_groupe"/>
+        </item>
+        <item row="12" column="1">
+         <widget class="QComboBox" name="combo_prof"/>
         </item>
        </layout>
       </item>
@@ -139,6 +139,13 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>Retour</string>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QPushButton" name="butto_ok">
