--- a/ihm_creerreservationchoixequipement.ui
+++ b/ihm_creerreservationchoixequipement.ui
@@ -43,14 +43,14 @@
          </spacer>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="butRetour">
           <property name="text">
            <string>Retour</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="butChoisir">
           <property name="text">
            <string>Choisir</string>
           </property>
