--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -46,7 +46,7 @@
      </widget>
     </item>
     <item row="1" column="2">
-     <widget class="QLineEdit" name="lineEdit_2"/>
+     <widget class="QLineEdit" name="mdp"/>
     </item>
     <item row="1" column="4">
      <spacer name="horizontalSpacer">
@@ -62,7 +62,7 @@
      </spacer>
     </item>
     <item row="0" column="2">
-     <widget class="QLineEdit" name="lineEdit"/>
+     <widget class="QLineEdit" name="id"/>
     </item>
     <item row="2" column="4">
      <widget class="QPushButton" name="pushButton">
